<resources>
    <string name="app_name">Desafio 1 DSM</string>
    <string name="titulo_salario">Descuentos de Salario</string>
    <string name="nombre_salario">Nombre: </string>
    <string name="salario_salario">Salario: </string>
    <string name="button_salario">Calcular </string>
    <string name="button_calcular_promedio">Calcular Promedio</string>
    <string name="button_calcular_salario">Calcular Salario</string>
    <string name="button_calculadora">Calculadora</string>
    <string name="calculadora_promedio">Calculadora de Promedio</string>
    <string name="titulo_main">Desafío Práctico 1</string>
    <string name="subtitulo_main">DSM104 G03L</string>
</resources>